2003-07-25  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Macedonian (mk) to ALL_LINGUAS

2003-07-22  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gdl/gdl-dock-layout.c: (gdl_dock_layout_build_models),
	(update_layouts_model), (cell_edited_cb),
	(gdl_dock_layout_construct_layouts_ui),
	(gdl_dock_layout_get_layouts_ui):
	* gdl/layout.glade:
	* gdl/test-dock.c: (save_layout_cb), (main):

	HIGify the layout manager GUI.

2003-07-21  Artur Flinta  <aflinta@cvs.gnome.org>

        * configure.in: Added "pl" in ALL_LINGUAS.

2003-06-14  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-05-28  Danilo Šegan  <dsegan@gmx.net>

	* configure.in (ALL_LINGUAS): Added "sr" and "sr@Latn".

2003-05-13  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in: Updated required versions for dependencies.

2003-05-13  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added "sk".

2003-04-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-master.c: Don't set object->master to NULL when
	disposing the master.  Instead call gdl_dock_object_unbind() so
	the dock object can unregister the weak pointer.  That simplifies
	the remove and dispose methods a bit.
	
2003-04-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-master.c (gdl_dock_master_drag_motion): Plugged a
	memory leak.
	
2003-04-05  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added "ja" to ALL_LINGUAS.

2003-03-27  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in (ALL_LINGUAS): Added "pt_BR".

2003-02-05  Thomas Vander Stichele <thomas at apestaart dot org>

        * configure.in: fix aclocal flags in maintainer mode

2003-01-24  Daniel Yacob <locales@geez.org>

	* configure.in: Added am to ALL_LINGUAS.

2003-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in (ALL_LINGUAS): Added "no".
	
2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>
